<resources>
    <string name="welcome_message">Willkommen in unserer Praxis</string>
    <string name="task_description">Bitte fahren Sie mit dem nächsten Schritt fort, um Ihre Daten einzugeben.</string>
    <string name="start">Starten</string>
    <string name="exit">Beenden</string>
    <string name="university_logo">University Logo</string>
    <string name="title_activity_main">Screening_app</string>
    <string name="action_settings">Settings</string>
    <string name="exit_confirmation_title">Beenden</string>
    <string name="exit_confirmation_message">Möchten Sie die Anwendung wirklich schließen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>

    <string name="fragebogen_f_r_neue_patienten">Fragebogen für Neue Patienten</string>
    <string name="bitte_ihren_namen_eingeben">Bitte Ihren Namen eingeben</string>
    <string name="vorname">Vorname:</string>
    <string name="bitte_ihren_vornamen_eingeben">Bitte Ihren Vornamen eingeben</string>
    <string name="beruf">Beruf:</string>
    <string name="bitte_ihren_beruf_eingeben">Bitte Ihren Beruf eingeben</string>
    <string name="geburtsdatum">Geburtsdatum:</string>
    <string name="tt_mm_jjjj">TT/MM/JJJJ</string>
    <string name="anschrift">Anschrift:</string>
    <string name="bitte_ihre_anschrift_eingeben">Bitte Ihre Anschrift eingeben</string>
    <string name="telefonnummer">Telefonnummer:</string>
    <string name="bitte_ihre_telefonnummer_eingeben">Bitte Ihre Telefonnummer eingeben</string>
    <string name="krankenversicherung">Krankenversicherung:</string>
    <string name="bitte_ihre_krankenversicherung_eingeben">Bitte Ihre Krankenversicherung eingeben</string>
    <string name="leiden_sie_an_allergien_wenn_ja_welche">Leiden Sie an Allergien? Wenn ja, welche?</string>
    <string name="bitte_allergien_eingeben">Bitte Allergien eingeben</string>
    <string name="sind_bei_ihnen_folgende_erkrankungen_bekannt_bitte_ausw_hlen">Sind bei Ihnen folgende Erkrankungen bekannt? Bitte auswählen:</string>
    <string name="r_cken_gelenkerkrankungen">Rücken-/Gelenkerkrankungen</string>
    <string name="herz_kreislauf_erkrankungen">Herz-Kreislauf-Erkrankungen</string>
    <string name="lungenerkrankungen">Lungenerkrankungen</string>
    <string name="magen_darm_erkrankungen">Magen-Darm-Erkrankungen</string>
    <string name="andere">Andere:</string>
    <string name="andere_erkrankungen_eingeben">Andere Erkrankungen eingeben</string>
    <string name="besitzen_sie_einen_impfausweis">Besitzen Sie einen Impfausweis?</string>
    <string name="impfausweis_ja">Ja</string>
    <string name="impfausweis_nein">Nein</string>
    <string name="nehmen_sie_regelm_ig_medikamente_ein">Nehmen Sie regelmäßig Medikamente ein?</string>
    <string name="medikamente_ja">Ja</string>
    <string name="medikamente_nein">Nein</string>
    <string name="abschicken">Abschicken</string>
    <string name="zur_ck">Zurück</string>
    <string name="beenden">Beenden</string>
    <string name="zusammenfassung_der_eingaben">Zusammenfassung der Eingaben</string>

    <string name="ehemaliger_hausarzt">Ehemaliger Hausarzt:</string>
    <string name="bekannte_erkrankungen">Bekannte Erkrankungen:</string>
    <string name="regelm_ige_medikation">Regelmäßige Medikation:</string>
    <string name="unterschrift">Unterschrift:</string>
    <string name="zur_ck_zum_formular">Zurück zum Formular</string>
    <string name="error_fill_fields">Please make sure the inputs are given</string>
    <string name="summary_template">Name: %1$s\nOccupation: %2$s\nAllergies: %3$s\nVaccination Status: %4$s\nMedications: %5$s</string>
    <string name="summary_title">Summary</string>
    <string name="ja">ja</string>
    <string name="nein">nein</string>
    <string name="ok">OK</string>
    <string name="name">Name:</string>
    <string name="was_ist_ihr_hausarzt">Wo ist Ihr hausarzt?</string>
    <string name="bitte_hausarzt_eingeben">hausarztinput</string>
    <string name="heutiges_datum">heutigesdatum</string>
    <string name="blase_nieren">blasen</string>
    <string name="stoffwechselerkrankungen">stoff</string>
    <string name="krebserkrankungen">krebser</string>
    <string name="herzlichen_dank">Herzlichen Dank!</string>
    <string name="benden">Benden</string>
    <string name="the_robot_will_ask_questions_here">The robot will ask questions here</string>
    <string name="start_chat">Start Chat</string>
</resources>
