<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:padding="16dp"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:layout_margin="8dp">

            <!-- Header -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heutiges_datum"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />
            <EditText
                android:id="@+id/inputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tt_mm_jjjj"
                android:inputType="date"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />
            <!-- Name -->
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bitte_ihren_namen_eingeben"
                android:inputType="textPersonName"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/labelFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vorname"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/inputFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bitte_ihren_vornamen_eingeben"
                android:inputType="textPersonName"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />



            <TextView
                android:id="@+id/labelOccupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=   "@string/beruf"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/inputOccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bitte_ihren_beruf_eingeben"
                android:inputType="text"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />


            <!-- Birth Date -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geburtsdatum"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />
            <EditText
                android:id="@+id/birthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tt_mm_jjjj"
                android:inputType="date"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />

            <!-- Address -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anschrift"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bitte_ihre_anschrift_eingeben"
                android:inputType="textPostalAddress"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />

            <!-- Phone Number -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefonnummer"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bitte_ihre_telefonnummer_eingeben"
                android:inputType="phone"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />

            <!-- Health Insurance -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/krankenversicherung"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />
            <EditText
                android:id="@+id/healthInsurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bitte_ihre_krankenversicherung_eingeben"
                android:inputType="text"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />

            <!-- Question Label -->
            <TextView
                android:id="@+id/labelAllergies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leiden_sie_an_allergien_wenn_ja_welche"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />

            <!-- Checkbox for Ja -->
            <CheckBox
                android:id="@+id/checkBoxJa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ja"
                android:layout_marginBottom="8dp" />

            <!-- Input field for writing, initially hidden -->
            <EditText
                android:id="@+id/inputAllergies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bitte_allergien_eingeben"
                android:inputType="text"
                android:padding="12dp"

                android:textSize="16sp" />

            <!-- Checkbox for Nein -->
            <CheckBox
                android:id="@+id/checkBoxNein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nein"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/was_ist_ihr_hausarzt"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />
            <EditText
                android:id="@+id/inputHausarzt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bitte_hausarzt_eingeben"
                android:inputType="textPersonName"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />
            <!-- Known Conditions -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sind_bei_ihnen_folgende_erkrankungen_bekannt_bitte_ausw_hlen"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />
            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_cken_gelenkerkrankungen"
                android:layout_marginBottom="8dp"
                android:textSize="16sp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/herz_kreislauf_erkrankungen"
                android:layout_marginBottom="8dp"
                android:textSize="16sp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lungenerkrankungen"
                android:layout_marginBottom="8dp"
                android:textSize="16sp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magen_darm_erkrankungen"
                android:layout_marginBottom="8dp"
                android:textSize="16sp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/andere"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blase_nieren"
                android:layout_marginBottom="8dp"
                android:textSize="16sp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stoffwechselerkrankungen"
                android:layout_marginBottom="8dp"
                android:textSize="16sp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/krebserkrankungen"
                android:layout_marginBottom="8dp"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/otherConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/andere_erkrankungen_eingeben"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />

            <!-- Vaccination -->
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/besitzen_sie_einen_impfausweis"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />
            <RadioGroup
                android:id="@+id/vaccinationGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ja" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nein" />
            </RadioGroup>

            <!-- Medications -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nehmen_sie_regelm_ig_medikamente_ein"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />
            <RadioGroup
                android:id="@+id/medicationsGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ja" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nein" />
            </RadioGroup>

            <!-- Submit -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">
                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abschicken"
                    android:backgroundTint="#4CAF50"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zur_ck"
                    android:layout_marginEnd="8dp"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#2196F3"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/exitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beenden"
                    android:layout_marginEnd="8dp"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#FF5252"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
