<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/universityLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/university_logo"
            android:contentDescription="@string/university_logo"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/taskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="16sp"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white"
                android:layout_marginEnd="16dp"
                 />


            <Button
                android:id="@+id/exitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textSize="16sp"
                android:backgroundTint="@color/error"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>